--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"homepage": "https://rahathossenmanik.github.io",
 	"private": true,
 	"dependencies": {
+		"@emailjs/browser": "^3.9.1",
 		"@testing-library/jest-dom": "^5.14.1",
 		"@testing-library/react": "^13.0.0",
 		"@testing-library/user-event": "^13.2.1",
@@ -12,6 +13,7 @@
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"react-scripts": "5.0.1",
+		"react-toastify": "^9.1.1",
 		"react-type-animation": "^2.1.2",
 		"reactstrap": "^9.1.5",
 		"web-vitals": "^2.1.0"
