--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
-  "homepage": "https://rahathossenmanik.github.io",
+  "homepage": "https://manikhosen.com",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.9.1",
@@ -12,6 +12,7 @@
     "gh-pages": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
     "react-type-animation": "^3.2.0",
